fix(PC-126): fix the title of the product card  if it's too long

--- a/src/components/common/ProductCard/ProductCard.module.scss
+++ b/src/components/common/ProductCard/ProductCard.module.scss
@@ -35,10 +35,14 @@
 }
 
 .title {
-  display: block;
-  height: 58px;
-  padding-top: 16px;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 
+  overflow: hidden;
+  text-overflow: ellipsis;
+
+  padding-top: 16px;
   cursor: pointer;
 }
 
